--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -1975,14 +1975,31 @@ We have learned a number of useful methods in this chapter as well as how to use
 \item You can visit the \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array}{Mozilla Developer Network} to learn more about iterator methods (and all other parts of JavaScript!).
 \end{itemize}
 
-
-
-
-
-
-
 \newpage
 \section{Objects}
+\subsection{Introduction to Objects}
+It is time to learn more about the basic structure that permeates nearly every aspect of JavaScript programming: objects. \\
+\newline
+You are probably already more comfortable with objects than you think, because JavaScript loves objects. Many components of the language are actually objects under the hood, and even the parts that are not— like strings or numbers— can still act like objects in some instances. \\
+\newline
+There are only seven fundamental data types in JavaScript, and six of those are the primitive data types: string, number, boolean, null, undefined, and symbol. With the seventh type, objects, we open our code to more complex possibilities. We can use JavaScript objects to model real-world things, like a basketball, or we can use objects to build the data structures that make the web possible. \\
+\newline
+At their core, JavaScript objects are containers storing related data and functionality, but that deceptively simple task is extremely powerful in practice. You have been using the power of objects all along, but now it is time to understand the mechanics of objects and start making your own.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \newpage
 \section{Classes}
 \newpage
