--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -1986,13 +1986,181 @@ There are only seven fundamental data types in JavaScript, and six of those are 
 \newline
 At their core, JavaScript objects are containers storing related data and functionality, but that deceptively simple task is extremely powerful in practice. You have been using the power of objects all along, but now it is time to understand the mechanics of objects and start making your own.
 
+\subsection{Creating Object Literals} 
+Objects can be assigned to variables just like any JavaScript type. We use curly braces, \colorbox{lightgray}{\{\}}, to designate an \textit{object literal}:
+\begin{lstlisting}
+let spaceship = {}; // spaceship is an empty object
+\end{lstlisting}
+We fill an object with unordered data. This data is organized into \textit{key-value pairs}. A key is like a variable name that points to a location in memory that holds a value. A key’s value can be of any data type in the language including functions or other objects. \\
+\newline
+We make a key-value pair by writing the key’s name, or \textit{identifier}, followed by a colon and then the value. We separate each key-value pair in an object literal with a comma (\colorbox{lightgray}{,}). Keys are strings, but when we have a key that does not have any special characters in it, JavaScript allows us to omit the quotation marks:
+\begin{figure}[H]
+\includegraphics[scale = 0.65]{10_1}
+\centering 
+\end{figure}
+\newpage
+\begin{lstlisting}
+// An object literal with two key-value pairs
+let spaceship = {
+  "Fuel Type": "diesel",
+  color: "silver"
+};
+\end{lstlisting}
+The \colorbox{lightgray}{spaceship} object has two properties \colorbox{lightgray}{Fuel Type} and \colorbox{lightgray}{color}. \colorbox{lightgray}{`Fuel Type'} has quotation marks because it contains a space character.
 
+\subsection{Accessing Properties}
+There are two ways we can access an object’s property. Let us explore the first way— dot notation, \colorbox{lightgray}{.}. \\
+\newline
+You have used dot notation to access the properties and methods of built-in objects and data instances:
+\begin{lstlisting}
+"hello".length; // Returns 5
+\end{lstlisting}
+With property dot notation, we write the object’s name, followed by the dot operator and then the property name (key): 
+\begin{lstlisting}
+let spaceship = {
+  homePlanet: "Earth",
+  color: "silver"
+};
+spaceship.homePlanet; // Returns "Earth",
+spaceship.color; // Returns "silver",
+\end{lstlisting}
+\begin{figure}[H]
+\includegraphics[scale = 0.7]{10_2}
+\centering
+\end{figure}
+If we try to access a property that does not exist on that object, \colorbox{lightgray}{undefined} will be returned.
+\begin{lstlisting}
+spaceship.favoriteIcecream; // Returns undefined
+\end{lstlisting}
 
+\subsection{Bracket Notation}
+The second way to access a key’s value is by using bracket notation, \colorbox{lightgray}{$[$ $]$}. You have used bracket notation when indexing an array:
+\begin{lstlisting}
+["A", "B", "C"][0]; // Returns "A"
+\end{lstlisting}
+To use bracket notation to access an object’s property, we pass in the property name (key) as a string.
+\begin{figure}[H]
+\includegraphics[scale = 0.7]{10_3}
+\centering
+\end{figure}
+We \textbf{must} use bracket notation when accessing keys that have numbers, spaces, or special characters in them. Without bracket notation in these situations, our code would throw an error.
+\begin{lstlisting}
+let spaceship = {
+  "Fuel Type": "Turbo Fuel",
+  "Active Duty": true,
+  homePlanet: "Earth",
+  numCrew: 5
+};
+spaceship["Active Duty"];   // Returns true
+spaceship["Fuel Type"];   // Returns  "Turbo Fuel"
+spaceship["numCrew"];   // Returns 5
+spaceship["!!!!!!!!!!!!!!!"];   // Returns undefined
+\end{lstlisting}
+With bracket notation you can also use a variable inside the brackets to select the keys of an object. This can be especially helpful when working with functions:
+\begin{lstlisting}
+let returnAnyProp = (objectName, propName) => objectName[propName];
 
+returnAnyProp(spaceship, "homePlanet"); // Returns "Earth"
+\end{lstlisting}
+If we tried to write our \colorbox{lightgray}{returnAnyProp()} function with dot notation (\colorbox{lightgray}{objectName.propName}) the computer would look for a key of \colorbox{lightgray}{`propName'} on our object and not the value of the \colorbox{lightgray}{propName} parameter.
 
+\subsection{Property Assignment}
+Once we have defined an object, we are not stuck with all the properties we wrote. Objects are mutable meaning we can update them after we create them. We can use either dot notation, \colorbox{lightgray}{.}, or bracket notation, \colorbox{lightgray}{$[$ $]$}, and the assignment operator, \colorbox{lightgray}{=} to add new key-value pairs to an object or change an existing property.
+\begin{figure}[H]
+\includegraphics[scale = 0.68]{10_4}
+\centering
+\end{figure}
+One of two things can happen with property assignment:
+\begin{itemize}[leftmargin = *]
+\item If the property already exists on the object, whatever value it held before will be replaced with the newly assigned value.
+\item If there was no property with that name, a new property will be added to the object.
+\end{itemize}
+It is important to know that although we cannot reassign an object declared with \colorbox{lightgray}{const}, we can still mutate it, meaning we can add new properties and change the properties that are there. 
+\begin{lstlisting}
+const spaceship = {type: "shuttle"};
+spaceship = {type: "alien"}; // TypeError: Assignment to constant variable.
+spaceship.type = "alien"; // Changes the value of the type property
+spaceship.speed = "Mach 5"; 
+// Creates a new key of "speed" with a value of "Mach 5"
+\end{lstlisting}
+You can delete a property from an object with the \colorbox{lightgray}{delete} operator.
+\begin{lstlisting}
+const spaceship = {
+  "Fuel Type": "Turbo Fuel",
+  homePlanet: "Earth",
+  mission: "Explore the universe"
+};
 
+delete spaceship.mission;  // Removes the mission property
+\end{lstlisting}
 
+\subsection{Methods}
+When the data stored on an object is a function we call that a \textit{method}. A property is what an object has, while a method is what an object does. Object methods seem familiar because we have been using them all along. For example \colorbox{lightgray}{console} is a global javascript object and \colorbox{lightgray}{.log()} is a method on that object. \colorbox{lightgray}{Math} is also a global javascript object and \colorbox{lightgray}{.floor()} is a method on it. \\
+\newline
+We can include methods in our object literals by creating ordinary, comma-separated key-value pairs. The key serves as our method’s name, while the value is an anonymous function expression.
+\begin{lstlisting}
+const alienShip = {
+  invade: function () { 
+    console.log("Hello! We have come to dominate your planet.")
+  }
+};
+\end{lstlisting}
+With the new method syntax introduced in ES6 we can omit the colon and the \colorbox{lightgray}{function} keyword.
+\begin{lstlisting}
+const alienShip = {
+  invade () { 
+    console.log('Hello! We have come to dominate your planet.")
+  }
+};
+\end{lstlisting}
+Object methods are invoked by appending the object’s name with the dot operator followed by the method name and parentheses:
+\begin{lstlisting}
+alienShip.invade(); // Prints "Hello! We have come to dominate your planet."
+\end{lstlisting}
 
+\subsection{Nested Objects}
+In application code, objects are often nested— an object might have another object as a property which in turn could have a property that is an array of even more objects. \\
+\newline
+In our \colorbox{lightgray}{spaceship} object, we want a \colorbox{lightgray}{crew} object. This will contain all the crew members who do important work on the craft. Each of those \colorbox{lightgray}{crew} members are objects themselves. They have properties like \colorbox{lightgray}{name}, and \colorbox{lightgray}{degree}, and they each have unique methods based on their roles. We can also nest other objects in the \colorbox{lightgray}{spaceship} such as a \colorbox{lightgray}{telescope} or nest details about the spaceship’s computers inside a parent \colorbox{lightgray}{nanoelectronics} object. 
+\begin{lstlisting}
+const spaceship = {
+     telescope: {
+        yearBuilt: 2018,
+        model: "91031-XLT",
+        focalLength: 2032 
+     },
+    crew: {
+        captain: { 
+            name: "Sandra", 
+            degree: "Computer Engineering", 
+            encourageTeam() { console.log("We got this!") } 
+         }
+    },
+    engine: {
+        model: "Nimbus2000"
+     },
+     nanoelectronics: {
+         computer: {
+            terabytes: 100,
+            monitors: "HD"
+         },
+        "back-up": {
+           battery: "Lithium",
+           terabytes: 50
+         }
+    }
+}; 
+\end{lstlisting}
+We can chain operators to access nested properties. We will have to pay attention to which operator makes sense to use in each layer. It can be helpful to pretend you are the computer and evaluate each expression from left to right so that each operation starts to feel a little more manageable.
+\begin{lstlisting}
+spaceship.nanoelectronics["back-up"].battery; // Returns "Lithium"
+\end{lstlisting}
+In the preceding code:
+\begin{itemize}[leftmargin = *]
+\item First the computer evaluates \colorbox{lightgray}{spaceship.nanoelectronics}, which results in an object containing the \colorbox{lightgray}{back-up} and \colorbox{lightgray}{computer} objects.
+\item We accessed the \colorbox{lightgray}{back-up} object by appending \colorbox{lightgray}{["back-up"]}.
+\item The \colorbox{lightgray}{back-up} object has a battery property, accessed with \colorbox{lightgray}{.battery} which returned the value stored there: \colorbox{lightgray}{"Lithium"}. 
+\end{itemize}
 
 
 
